# Reticle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: NeomorphicLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Meters/: LevelMeter.h  LufsMeter.h  SpectrumAnalyzer.h
